basic buttons grid

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+
+  <link rel="stylesheet" href="styles.css">
   
   <title>Frontend Mentor | Calculator app</title>
 
@@ -16,6 +18,34 @@
 </head>
 <body>
 
+  <div class="calculator">
+    <div class="calculator__header">
+
+    </div>
+    <div class="calculator__display">
+
+    </div>
+    <div class="calculator__buttons">
+      <button class="button">1</button>
+      <button class="button">2</button>
+      <button class="button">3</button>
+      <button class="button">4</button>
+      <button class="button">5</button>
+      <button class="button">6</button>
+      <button class="button">7</button>
+      <button class="button">8</button>
+      <button class="button">9</button>
+      <button class="button">0</button>
+      <button class="button button--delete">del</button>
+      <button class="button button--plus">+</button>
+      <button class="button button--minus">-</button>
+      <button class="button button--multiply">x</button>
+      <button class="button button--dot">.</button>
+      <button class="button button--divide">/</button>
+      <button class="button button--equal">=</button>
+      <button class="button button--reset">reset</button>
+    </div>
+  </div>
 
   
   <div class="attribution">
