adding variables and data attributes

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
   <link rel="stylesheet" href="./styles/main.css">
+
+  <script prel src="./script.js"></script>
   
   <title>Frontend Mentor | Calculator app</title>
 
@@ -26,23 +28,23 @@
 
     </div>
     <div class="calculator__buttons">
-      <button class="button">1</button>
-      <button class="button">2</button>
-      <button class="button">3</button>
-      <button class="button">4</button>
-      <button class="button">5</button>
-      <button class="button">6</button>
-      <button class="button">7</button>
-      <button class="button">8</button>
-      <button class="button">9</button>
-      <button class="button">0</button>
+      <button class="button" data-number>1</button>
+      <button class="button" data-number>2</button>
+      <button class="button" data-number>3</button>
+      <button class="button" data-number>4</button>
+      <button class="button" data-number>5</button>
+      <button class="button" data-number>6</button>
+      <button class="button" data-number>7</button>
+      <button class="button" data-number>8</button>
+      <button class="button" data-number>9</button>
+      <button class="button" data-number>0</button>
       <button class="button button--delete">del</button>
-      <button class="button button--plus">+</button>
-      <button class="button button--minus">-</button>
-      <button class="button button--multiply">x</button>
-      <button class="button button--dot">.</button>
-      <button class="button button--divide">/</button>
-      <button class="button button--equal">=</button>
+      <button class="button button--plus" data-operation>+</button>
+      <button class="button button--minus" data-operation>-</button>
+      <button class="button button--multiply" data-operation>x</button>
+      <button class="button button--dot" data-operation>.</button>
+      <button class="button button--divide" data-operation>/</button>
+      <button class="button button--equal" data-operation>=</button>
       <button class="button button--reset">reset</button>
     </div>
   </div>
