--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <link rel="stylesheet" href="./styles/main.css">
 
-  <script prel src="./script.js"></script>
+  <script prel type="module"  src="./scripts/main.js"></script>
   
   <title>Frontend Mentor | Calculator app</title>
 
@@ -25,7 +25,8 @@
 
     </div>
     <div class="calculator__display">
-
+      <div class="calculator__previous-operand">5</div>
+      <div class="calculator__current-operand"></div>
     </div>
     <div class="calculator__buttons">
       <button class="button" data-number>1</button>
@@ -42,9 +43,9 @@
       <button class="button button--plus" data-operation>+</button>
       <button class="button button--minus" data-operation>-</button>
       <button class="button button--multiply" data-operation>x</button>
-      <button class="button button--dot" data-operation>.</button>
+      <button class="button button--dot" data-number>.</button>
       <button class="button button--divide" data-operation>/</button>
-      <button class="button button--equal" data-operation>=</button>
+      <button class="button button--equal">=</button>
       <button class="button button--reset">reset</button>
     </div>
   </div>
