--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     </div>
     <div class="calculator__display">
-      <div class="calculator__previous-operand">5</div>
+      <div class="calculator__previous-operand"></div>
       <div class="calculator__current-operand"></div>
     </div>
     <div class="calculator__buttons">
