convert toggle css to sass

--- a/index.html
+++ b/index.html
@@ -24,11 +24,13 @@
     <div class="calculator__header">
       <div class="calculator__name">calc</div>
       <div class="calculator__theme-control"> 
-        <div class="multi-radio-toggle multi-radio-toggle--two">
-          <input type="radio" id="mt-first1" name="toggle_option1" checked>
-          <input type="radio" id="mt-second1" name="toggle_option1">
-          <label for="mt-first1" class="multi-radio-toggle__label"><p>Mild</p></label>
-          <label for="mt-second1" class="multi-radio-toggle__label"><p>Spicy</p></label>
+        <div class="multi-radio-toggle multi-radio-toggle--three">
+          <input type="radio" id="mt-first2" name="toggle_option2">
+          <input type="radio" id="mt-second2" name="toggle_option2" checked>
+          <input type="radio" id="mt-third2" name="toggle_option2">
+          <label for="mt-first2" class="multi-radio-toggle__label"><p>Lions</p></label>
+          <label for="mt-second2" class="multi-radio-toggle__label multi-radio-toggle__label--align-bottom"><p>Tigers</p></label>
+          <label for="mt-third2" class="multi-radio-toggle__label"><p>Bears</p></label>
           <div class="multi-radio-toggle__slide-bg"></div>
         </div>
       </div>
