--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
           <input type="radio" id="mt-first2" name="toggle_option2">
           <input type="radio" id="mt-second2" name="toggle_option2" checked>
           <input type="radio" id="mt-third2" name="toggle_option2">
-          <label for="mt-first2" class="multi-radio-toggle__label"><p>Lions</p></label>
-          <label for="mt-second2" class="multi-radio-toggle__label multi-radio-toggle__label--align-bottom"><p>Tigers</p></label>
-          <label for="mt-third2" class="multi-radio-toggle__label"><p>Bears</p></label>
+          <label for="mt-first2" class="multi-radio-toggle__label"><p>1</p></label>
+          <label for="mt-second2" class="multi-radio-toggle__label "><p>2</p></label>
+          <label for="mt-third2" class="multi-radio-toggle__label"><p>3</p></label>
           <div class="multi-radio-toggle__slide-bg"></div>
         </div>
       </div>
