adding variables to change color theme function

--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
-<body class="body">
+<body class="body theme-1">
 
   <div class="calculator">
     <div class="calculator__header">
       <div class="calculator__name">calc</div>
       <div class="calculator__theme-control"> 
+        <div>Theme</div>
         <div class="multi-radio-toggle multi-radio-toggle--three">
           <input type="radio" id="mt-first2" name="toggle_option2">
           <input type="radio" id="mt-second2" name="toggle_option2" checked>
