styling the toggle

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
     <div class="calculator__header">
       <div class="calculator__name">calc</div>
       <div class="calculator__theme-control"> 
-        <div>Theme</div>
+        <div class="calculator__theme-text">Theme</div>
         <div class="multi-radio-toggle multi-radio-toggle--three">
-          <input type="radio" id="mt-first2" name="toggle_option2">
-          <input type="radio" id="mt-second2" name="toggle_option2" checked>
-          <input type="radio" id="mt-third2" name="toggle_option2">
+          <input type="radio" id="mt-first2" name="toggle_option2" value="1" checked>
+          <input type="radio" id="mt-second2" name="toggle_option2" value="2" >
+          <input type="radio" id="mt-third2" name="toggle_option2" value="3">
           <label for="mt-first2" class="multi-radio-toggle__label"><p>1</p></label>
           <label for="mt-second2" class="multi-radio-toggle__label "><p>2</p></label>
           <label for="mt-third2" class="multi-radio-toggle__label"><p>3</p></label>
