--- a/index.html
+++ b/index.html
@@ -12,11 +12,6 @@
   
   <title>Frontend Mentor | Calculator app</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body class="body theme-1">
 
@@ -42,15 +37,15 @@
     </div>
     
     <div class="calculator__buttons">
-          <button class="button" data-number>1</button>
-          <button class="button" data-number>2</button>
-          <button class="button" data-number>3</button>
-          <button class="button" data-number>4</button>
-          <button class="button" data-number>5</button>
-          <button class="button" data-number>6</button>
           <button class="button" data-number>7</button>
           <button class="button" data-number>8</button>
           <button class="button" data-number>9</button>
+          <button class="button" data-number>4</button>
+          <button class="button" data-number>5</button>
+          <button class="button" data-number>6</button>
+          <button class="button" data-number>1</button>
+          <button class="button" data-number>2</button>
+          <button class="button" data-number>3</button>
           <button class="button" data-number>0</button>
           <button class="button button--delete">del</button>
           <button class="button button--plus" data-operation>+</button>
@@ -68,7 +63,7 @@
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Alex Garcia</a>.
   </div>
 </body>
 </html>
