adding main tag

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <title>Frontend Mentor | Calculator app</title>
 
 </head>
-<body class="body theme-1">
-
+<body >
+<main class="main theme-1">
   <div class="calculator">
     <div class="calculator__header">
       <div class="calculator__name">calc</div>
@@ -65,5 +65,7 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Alex Garcia</a>.
   </div>
+</main>
+  
 </body>
 </html>
