--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <link rel="stylesheet" href="./styles/main.css">
 
-  <script prel type="module"  src="./scripts/main.js"></script>
+  <script defer type="module"  src="./scripts/main.js"></script>
   
   <title>Frontend Mentor | Calculator app</title>
 
