remove defer attr for unnecessary

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
   <link rel="stylesheet" href="./styles/main.css">
-
-  <script defer type="module"  src="./scripts/main.js"></script>
+  <script type="module"  src="./scripts/main.js"></script>
   
   <title>Frontend Mentor | Calculator app</title>
 
